--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
     "@types/winston": "^2.4.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
